<resources>
    <string name="app_name">AR Maker</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_up_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="facebook_application_id">240969553190742</string>
    <string name="facebook_login_protocol_scheme">fb240969553190742</string>
    <string name="title_sign_in">로그인</string>
    <string name="title_sign_up">가입하기</string>
    <string name="title_activity_generation">Marker Generation</string>
    <string name="title_activity_test">Marker Test</string>
    <string name="comment_sign_in">The technology in this project is to develop an augmented reality-based advertising platform through the production of image based markers.</string>
    <string name="comment_sign_up">As information transmission medium utilizing virtual reality and augmented reality contents has diversified and demand has increased recently, users are forced to use information that is structured by developers.</string>
    <string name="title_activity_choose">ChooseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Setting</string>
    <string name="title_activity_account">Options</string>
    <string name="copyright_login">Copyright @ 2018 Curonsys.</string>
    <string name="test_description">test image</string>
    <string name="test_result">test result\ntest file : lake.png\nfile url : /models/helicopter/helicopter.jet</string>
    <string name="choose_location_test">Get Last</string>
    <string name="choose_location_stop">Stop</string>
    <string name="button_text_test">Test</string>
    <string name="button_text_time_picker">Pick Time</string>
    <string name="button_text_date_picker">Pick Date</string>
    <string name="button_text_list_footer">Add Item</string>
    <string name="button_text_arcore1">Augmented Image</string>
    <string name="button_text_arcore2">Chromakey Video</string>
    <string name="button_text_arcore3">SceneView Test</string>
    <string name="button_text_arcore4">Cloud Anchors</string>
    <string name="button_text_select">Use</string>
    <string name="textview_text_item_name1">Earth Model</string>
    <string name="textview_text_item_content1">Earth is the third planet from the Sun and the only astronomical object known to harbor life. According to radiometric dating and other sources of evidence, Earth formed over 4.5 billion years ago.</string>
    <string name="textview_text_list_title">Title</string>
    <string name="textview_text_list_count">0</string>
    <string name="fit_image_to_scan">Fit image to scan</string>
    <string name="plane_finding">Searching for surfaces&#8230;</string>
    <string name="choose_contents_title1">Title 1</string>
    <string name="choose_contents_title2">Title 2</string>
    <string name="choose_list_item_text1">Test Item</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call </string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now </string>
    <string name="geofence_transition_invalid_type">Geofence transition error: invalid transition type %1$d </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="service_not_available">The background geocoding service is not available due to a network error or IO exception.</string>
    <string name="invalid_lat_long_used">The latitude and/or longitude values that are provided in the Location object are invalid.</string>
    <string name="no_address_found">The geocoder cannot find an address for the given latitude/longitude.</string>
    <string name="address_found">The geocoder found an address.</string>
    <string name="no_geocoder_available">The background geocoding service is not available due to a network error or IO exception.</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="search_title">Find Places</string>
    <string name="search_hint">Search</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">General</string>
    <string name="tab_text_2">Contents</string>
    <string name="tab_text_3">Published</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_myaccount">MyaccountActivity</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">General</string>
    <string name="title_dashboard">Contents</string>
    <string name="title_notifications">Published</string>
    <string name="title_info">Info</string>
    <string name="title_sync">Sync</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>